<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">510093792420343</string>
    <string name="app_versionName">1.7</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">Heart Carer version2</string>
    <string name="hint_phonenum">2501231234</string>
    <string name="temp_date">2014-01-01</string>
    <string name="url_homepage">http://ecg.ece.uvic.ca</string>
    <string name="url_googleplus">https://plus.google.com/108678133133914992526</string>
    <string name="url_facebook">https://www.facebook.com/heartcarerapp</string>
    <string name="facebook">Facebook</string>
    <string name="googleplus">Google+</string>
    <string name="profile_username">Username</string>
    <string name ="app_name_title">Heart Carer</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_rp">Remember password</string>
    <string name="login_signin">Sign in</string>
    <string name="login_signup">Sign up</string>
    <string name="login_cwa">Continue without account</string>
    <string name="login_latest">The latest version "</string>
    <string name="login_available">" is available, download now?</string>
    <string name="login_check">Checking for update...</string>
    <string name="login_update">Update</string>
    <string name="login_logging">Logging in...</string>
    <string name="login_length_un">"Length of Username should be "</string>
    <string name="login_length_pw">"Length of Password should be "</string>
    <string name="login_pressback">Press back button again to exit!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="update">Update</string>
    <string name="userid">User ID</string>
    <string name="downapk">Download Apk</string>
    <string name="feedback">Feedback</string>
    <string name="upload">Upload</string>
    <string name="change">Change</string>
    <string name="conti">Continue</string>
    <string name="test">Test</string>
    <string name="save">Save</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="setting">Setting</string>
    <string name="set">Set</string>
    <string name="send">Send</string>
    <string name="excla">!</string>
    <string name="stop">Stop</string>
    <string name="scan">Scan</string>
    <string name="avail">Available only to registered user!</string>
    <string name="nointernet">Internet is not available!</string>
    <string name="noresponse">No response!</string>
    <string name="homepage">Home page</string>
    <string name="ecgsignal1">ECG Signal CH1</string>
    <string name="ecgsignal2">ECG Signal CH2</string>
    <string name="ecgsignal">ECG Signal</string>
    <string name="select">"Select a "</string>
    <string name="signup_autofill">Auto Fill</string>
    <string name="signup_email">E-mail Address</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_cpassword">Confirm Password</string>
    <string name="signup_default">Use phone account information?</string>
    <string name="signup_signing">Signing up...</string>
    <string name="ble_run">" is running"</string>
    <string name="main_hrm">Heart Rate Monitor</string>
    <string name="quick_check">Quick Check</string>
    <string name="main_data">Data Management</string>
    <string name="main_profile">Profile Settings</string>
    <string name="main_settings">Settings</string>
    <string name="main_noti">Notification Settings</string>
    <string name="main_general">General Settings</string>
    <string name="main_about">About</string>
    <string name="main_mydoctors">MyDoctors</string>
    <string name="main_return_device">Return Device</string>
    <string name="main_returning_device">Returning device...</string>
    <string name="main_exit">Exit</string>
    <string name="main_notes">Notes</string>
    <string name="main_hi">Hi</string>
    <string name="main_welcome">", welcome to use "</string>
    <string name="main_pressback">Double press back button to return to home!</string>
    <string name="main_thank">"Thank you for using "</string>
    <string name="hrm_notconnected">Not Connected</string>
    <string name="hrm_connected">Connected</string>
    <string name="hrm_connecting">Connecting</string>
    <string name="hrm_disconnecting">Disconnecting</string>
    <string name="hrm_sense">Sense</string>
    <string name="hrm_plot">Plot</string>
    <string name="hrm_save">Save</string>
    <string name="hrm_info">" Information"</string>
    <string name="hrm_menu_clear">Clear Graph</string>
    <string name="hrm_menu_select">Select sensor</string>
    <string name="hrm_menu_sensor">Sensor info</string>
    <string name="hrm_menu_my">My device info</string>
    <string name="hrm_devicename">Device Name</string>
    <string name="hrm_mac">Mac Address</string>
    <string name="hrm_disfirst">Please disconnect first!</string>
    <string name="hrm_turnon">Please turn on Bluetooth!</string>
    <string name="hrm_notincon">Not in connection!</string>
    <string name="hrm_clear">Graph cleared!</string>
    <string name="global_sensor">Heartrate Sensor</string>
    <string name="global_exit">Exit</string>
    <string name="global_wtexit">"Want to exit "</string>
    <string name="global_return_device">Are you ready to return the device to the designated location?</string>
    <string name="about_check">Check for update</string>
    <string name="about_uptodate">Your version is up to date!</string>
    <string name="about_author">Written by WanboLi / Weizheng Li</string>
    <string name="about_copyright">Copyright ©2014 Xiaodai Dong</string>
    <string name="about_all">All Rights Reserved</string>
    <string name="dms_mode">Mode:</string>
    <string name="dms_from">From:</string>
    <string name="dms_to">To:</string>
    <string name="dms_or">or</string>
    <string name="dms_search">Search all days</string>
    <string name="dml_cdc">Clear download cache</string>
    <string name="profile_ori">Original Password (Needed only when change password)</string>
    <string name="profile_new">New Password</string>
    <string name="profile_confirm">Confirm New Password</string>
    <string name="noti_enumber">Emergency Number:</string>
    <string name="noti_emessage">Emergency Message:</string>
    <string name="noti_auto">Send message automatically when in emergency</string>
    <string name="noti_append">Append my location in the message</string>
    <string name="noti_mycurloc">My current location</string>
    <string name="noti_showinmap">Show in map</string>
    <string name="noti_messent">Short message already sent!</string>
    <string name="noti_sendmestest">Send Message Test</string>
    <string name="noti_wanttosend">Want to send message now?</string>
    <string name="noti_type">Type your message here</string>
    <string name="gen_wlan">WLAN (Wifi)</string>
    <string name="gen_autorotate">Auto-rotate screen</string>
    <string name="gen_location">Location service</string>
    <string name="gen_cloud">Save in cloud</string>
    <string name="gen_cs">Compressed Sensing mode</string>
    <string name="gen_offbt">Turn off Bluetooth when exit</string>
    <string name="gen_savelen">Save length</string>
    <string name="gen_lowbpm">Low bpm</string>
    <string name="gen_highbpm">High bpm</string>
    <string name="feedback_up">Up to 140 words</string>
    <string name="feedback_type">Please type your feedback!</string>
    <string name="feedback_more">More than 140 words!</string>
    <string name="feedback_sending">Sending your feedback...</string>
    <string name="hrm_menu_channel">Select channel</string>
    <string name="Single_Chart_Fragment">Single Chart Fragment</string>
    <string name="Double_Chart_Fragment">Double Chart Fragment</string>
    <string name="signup_address">Address</string>
    <string name="signup_mpn">Medical plan number</string>
    <string name="signup_sex">Gender</string>
    <string name="AutoSave">Automatically save data on cloud</string>
    <string name="start_test">Start Test</string>
    <string name="quick_test_report">Quick Test Report</string>
    <string name="channel_name">Heart Carer</string>
    <string name="channel_description">Heart Carer Background Service</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="notes">Notes</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
</resources>