<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:text="@string/noti_enumber"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/emergencyNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_phonenum"
                android:inputType="phone" />

            <ImageButton
                android:id="@+id/imageButton_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contact_48" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:text="@string/noti_emessage"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/emergencyMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/noti_type"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:gravity="center" >

                <CheckBox
                    android:id="@+id/checkSendMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/noti_auto"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:gravity="center" >

                <CheckBox
                    android:id="@+id/checkAppendLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/noti_append"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:gravity="center" >
            </LinearLayout>

            <Button
                android:id="@+id/buttonCurLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noti_mycurloc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="fill_parent"
                android:layout_height="43dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@xml/signin_login"
                android:text="@string/test"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="43dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@xml/signin_login"
                android:text="@string/save"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>